--- a/public/style.css
+++ b/public/style.css
@@ -3,3 +3,14 @@
     width: 500px;
     height: 600px;
 }
+
+.component-h2 {
+    text-align: center;
+    color: #ea4f5f;
+}
+
+h1 {
+    text-align: center;
+    background-color: #fbfbfb; 
+    color: #da1914;
+}
